--- a/style.css
+++ b/style.css
@@ -4,12 +4,122 @@ h2,
 p,
 ul,
 li,
-a {
+a,
+img {
+  @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
   margin: 0px;
   padding: 0px;
-  font-family: "Outfit", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.principal {
+  width: 90vw;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.boldo {
+  display: flex;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  justify-content: space-between;
+  margin-top: 56px;
+  width: 100%;
+  height: 42px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  color: #0a2640;
+}
+
+li + li {
+  margin-left: 2.5rem;
+}
+
+.links p {
+  margin-left: 2.5rem;
+  border: 2px solid #0a2640;
+  padding: 8px 40px 8px 40px;
+  border-radius: 24px;
+}
+
+.links {
+  display: flex;
+  font-size: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  width: 26px;
+  height: 33px;
+  margin-right: 11px;
+}
+
+.boldo h1 {
+  font-weight: 700;
+  display: flex;
+  font-size: 2.703rem;
+  line-height: 34px;
+  color: #0a2640;
+}
+
+/*titulo*/
+
+.titulo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+
+  width: 100%;
+  height: 11.438em;
+}
+
+.titulo p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.25em;
+  margin-bottom: 12px;
+  margin-top: 72px;
+  color: #0a2640;
+}
+
+.titulo h1 {
+  font-weight: 400;
+  font-size: 4em;
+  color: #0a2640;
+}
+
+/*segunda sessão*/
+
+.section-dois {
+  display: flex;
+}
+
+.segunda-img {
+  max-width: 550px;
+  width: 386px;
+  margin-top: 67px;
 }
