--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
   justify-content: center;
   align-self: center;
   justify-content: space-between;
-  margin-top: 56px;
+  margin-top: 50px;
   width: 100%;
   height: 42px;
 }
@@ -105,7 +105,7 @@ li + li {
   font-weight: 400;
   font-size: 1.25em;
   margin-bottom: 12px;
-  margin-top: 72px;
+  margin-top: 70px;
   color: #0a2640;
 }
 
@@ -217,6 +217,9 @@ li + li {
     display: inline-block;
     width: 32px;
     height: 32px;
+  }
+  .titulo p {
+    margin-top: 10px;
   }
 }
 
