--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ li + li {
   align-self: center;
 
   width: 100%;
-  height: 11.438em;
+  height: 10.438em;
 }
 
 .titulo p {
@@ -113,7 +113,7 @@ li + li {
   font-weight: 400;
   font-size: 4em;
   color: #0a2640;
-  margin-bottom: 67px;
+  margin-bottom: 60px;
 }
 
 /*segunda sessão*/
@@ -189,11 +189,17 @@ li + li {
     margin-right: 0px;
     margin-bottom: 45px;
   }
+  .segunda-img {
+    width: 100%;
+  }
 }
 
 @media (max-width: 660px) {
   li + li {
     margin-left: 2rem;
+  }
+  .titulo {
+    height: 8rem;
   }
 }
 
@@ -220,6 +226,9 @@ li + li {
   }
   .titulo p {
     margin-top: 10px;
+  }
+  .titulo h1 {
+    margin-bottom: 0px;
   }
 }
 
